Fixed overflow of text inside code div

--- a/pinnwand/static/pinnwand.css
+++ b/pinnwand/static/pinnwand.css
@@ -194,6 +194,7 @@ td.linenos {
 
 div.code {
     font-size: 1.2rem;
+    overflow: scroll;
 }
 
 td.code {
